--- a/examples/FirstTest.ipynb
+++ b/examples/FirstTest.ipynb
@@ -12,9 +12,9 @@
      "output_type": "stream",
      "text": [
       "WARNING: New definition \n",
-      "    broadcast(Any, NullableArrays.NullableArray...) at /Users/charles/.julia/v0.4/NullableArrays/src/broadcast.jl:100\n",
+      "    broadcast(Any, NullableArrays.NullableArray...) at /home/charles/.julia/v0.4/NullableArrays/src/broadcast.jl:100\n",
       "is ambiguous with: \n",
-      "    broadcast(Function, DataArrays.PooledDataArray...) at /Users/charles/.julia/v0.4/DataArrays/src/broadcast.jl:312.\n",
+      "    broadcast(Function, DataArrays.PooledDataArray...) at /home/charles/.julia/v0.4/DataArrays/src/broadcast.jl:312.\n",
       "To fix, define \n",
       "    broadcast(Function)\n",
       "before the new definition.\n"
@@ -22,12 +22,13 @@
     }
    ],
    "source": [
+    "using DataArrays: broadcast\n",
     "using SQLite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +39,7 @@
        "SQLite.DB(\"../data/viscosity/viscosity.sqlite\")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +226,7 @@
        "│ 5537 │ Nullable(\"Urbain, Bottinga, Richet 1982\") │ Nullable(\"\")       │"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
